src/styles/scss/style.scss
/* ... */
#credit {
	position: fixed;
	bottom: 2rem;
	left: 2rem;
	opacity: 0;
	text-align: left;
	transition: opacity 0.4s;

	&.shown {
		opacity: 1;
	}

	a {
		font-size: 13px;
		color: #fff9;
		text-decoration: none;
		transition: color 0.1s;

		&:hover {
			color: #fffe;
		}
	}
}

#popup {
	display: flex;
	position: fixed;
	bottom: 4rem;
	left: 4rem;
	z-index: 3;
	transition: opacity 0.4s;

	#popup_buttons a,
	#popup_text {
		opacity: 0;
		transition: opacity 0.2s, background-color 0.2s, color 0.2s;
	}

	&.shown {
		#popup_buttons a,
		#popup_text {
			opacity: 1;
			cursor: pointer;
			transition: opacity 2s, background-color 0.2s, color 0.2s;
		}
	}
}

#popup_buttons {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	min-width: 140px;

	a {
		color: white;
		text-decoration: none;
		@include frostedGlass($alpha: 0.2, $blur: 10px);
		border-radius: 10px;
		line-height: 36px;

		&:hover {
			@include frostedGlass($alpha: 0.3, $blur: 10px);
		}

		&:active {
			@include frostedGlass($alpha: 0.6, $blur: 10px);
		}
	}
}

#popup_text {
	width: 260px;
	left: 40px;
	text-align: left;
	padding: 10px 30px;
	margin-right: 10px;
	border-radius: 10px;
	justify-content: space-between;
	@include frostedGlass($alpha: 0.2, $blur: 10px);

	&::before {
		content: '×';
		opacity: 0;
		position: absolute;
		top: 20px;
		left: 140px;
		width: 40px;
		height: 40px;
		font-size: 30px;
		line-height: 35px;
		border-radius: 5px;
		color: #fff;
		text-align: center;
		transition: opacity 0.4s, filter 0.2s;
	}

	&:hover {
		color: transparent;
		@include frostedGlass($alpha: 0.1, $blur: 10px);

		&::before {
			opacity: 1;
		}
	}

	&:active {
		@include frostedGlass($alpha: 0, $blur: 10px);

		&::before {
			filter: brightness(0.8);
		}
	}
}

#bonjourrError {
	height: 80vh;
	width: 80vw;
	margin: 0 10vw;
	opacity: 0;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	transition: opacity 0.4s;
	color: #ddd;

	pre {
		white-space: normal;
		word-break: break-all;
		user-select: all;
		cursor: text;
		max-width: 400px;
	}

	a {
		color: #ddd;
	}

	button {
		margin: 4em;
		cursor: pointer;
	}
}

@import 'settings';
@import 'dark';
@import 'responsive';

